- fix alignment issues on rating bar in class detail page

--- a/client/src/components/ClassDetail/classDetail.scss
+++ b/client/src/components/ClassDetail/classDetail.scss
@@ -64,6 +64,7 @@
 
 .ratingFontSize {
     font-size: 12px;
+    min-width: 30px;
 }
 
 .ratingContainer {
