--- a/client/src/scss/spaces/components/_carousel.scss
+++ b/client/src/scss/spaces/components/_carousel.scss
@@ -22,6 +22,8 @@
         opacity: 1;
         background: $white;
     }
+
+    margin-bottom: 32px;
 }
 
 //Carousel Controls 
